@@ -20,6 +20,9 @@ namespace RimRound.Comps
 
         public override IEnumerable<Gizmo> CompGetGizmosExtra()
         {
+            if (!this.parent.AsPawn().IsColonist && !this.parent.AsPawn().IsPrisonerOfColony && !Prefs.DevMode)
+                yield break;
+
             if (GlobalSettings.showBlanketManagementGizmo)
                 yield return hideCoversGizmo;
         }
